--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "atree",
+  "name": "christmas-2022",
   "version": "0.0.0",
-  "description": "Just a simple christmas tree, based on redit story",
+  "description": "Christmas wishesz for 2022",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "tree",
-    "christmas",
-    "processing"
-  ],
-  "author": "Andrei Kashcha",
+  "keywords": ["tree", "christmas", "processing"],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/anvaka/atree"
+    "url": "https://github.com/zozo8/christmas-2022"
   }
 }
